<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="co.yosola.colombianjams.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/textBackground"
            android:textSize="20sp"
            tools:text="Home" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:fontFamily="casual"
        android:padding="@dimen/padding_text"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textBackground"
        android:textSize="@dimen/text_AppName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/genres"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:text="@string/genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

        <ImageView
            android:id="@+id/genres_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:src="@drawable/musiciconbc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:text="@string/artist"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

        <ImageView
            android:id="@+id/artist_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:src="@drawable/musiciconbc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allsongs"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:text="@string/allsongs"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

        <ImageView
            android:id="@+id/allsongs_imag"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:src="@drawable/musiciconbc" />

    </LinearLayout>

</LinearLayout>