<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="co.yosola.colombianjams.PlaySingleSongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/navigation_arrow"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            tools:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/text_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="8dp"
            android:textColor="@color/textBackground"
            android:textSize="20sp"
            tools:text="@string/playsong" />

        <ImageView
            android:id="@+id/navigation_forward_arrow"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="190dp"
            tools:src="@drawable/ic_arrow_forward_black_24dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/song_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/song_one"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textBackground"
            android:textSize="35sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/artist_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/artist_song_one"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textBackground"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/song_name_text"/>

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:src="@drawable/escalona"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/artist_name_text"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/ic_fast_rewind_black_24dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="50dp"/>

            <ImageView
                android:id="@+id/play_current_song"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:src="@drawable/ic_fast_forward_black_24dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:layout_marginRight="50dp"/>


        </LinearLayout>




    </RelativeLayout>

</LinearLayout>